Fixed deprecation Move to JDK11